ada tambah gampang

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ cache
 /upload/catalog2
 /upload/.project
 /upload/.buildpath
+/.buildpath
+/.project
+/.settings/org.eclipse.php.core.prefs
+/.settings/org.eclipse.wst.common.project.facet.core.xml
